[package]
name = "devpod-provider-hetzner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.0", features = ["derive"] }
hcloud = "0.14.0"
openssh = { version = "0.9.9", features = ["openssh-mux-client"] }
openssh-keys = "0.6.0"
openssl = { version = "0.10.52", features = ["vendored"] }
petname = "1.1.3"
ssh2 = "0.9.4"
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"] }
